# Mario-SFML

./: .gitignore  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
dependencies/animatedgifs/include/: AnimatedGif.h
dependencies/animatedgifs/src/: AnimatedGif.cpp
levels/: level_1  level_2  level_3
program/: CMakeLists.txt
program/src/: main.cpp
